parser/src/test/resources/corpus/valid/40_opening_nav.ff
rule "Opening NAV" {
  let basis = opening nav of share class
}
