parser/src/test/resources/corpus/invalid/45_at_without_boundary.ff
rule "At Without Boundary" {
  let x = nav at of period
}
